media/sabnzbd/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sabnzbd
  namespace: media
spec:
  serviceName: sabnzbd
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      volumes:
      - name: sabnzbd
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:sabnzbd
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: downloads
        hostPath:
          path: /mnt/BLOCK/downloads
          type: Directory
      containers:
      - name: sabnzbd
        image: linuxserver/sabnzbd:version-3.5.3
        volumeMounts:
        - name: sabnzbd
          subPath: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        ports:
        - name: sabnzbd
          containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: sabnzbd
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: sabnzbd
          initialDelaySeconds: 15
          periodSeconds: 20
