media/sabnzbd/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-tailscale
  namespace: media
spec:
  tls:
  - hosts:
    - dead-room
  defaultBackend:
    service:
      name: sabnzbd
      port:
        name: http
  ingressClassName: tailscale
