media/sabnzbd/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sabnzbd
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: sabnzbd
  ingress:
  - ports:
    - port: 8080
    from: []
